--- a/src/main/frontend/styles/shared-styles.css
+++ b/src/main/frontend/styles/shared-styles.css
@@ -1,14 +1,59 @@
 .header {
-    background-color: #e3f2fd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     align-items: center;
     gap: 1em;
     padding: 0.6em 1em;
 }
 
+.login-form {
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    background-color: #f9f9f9;
+    width: 100%;
+    max-width: 350px;
+    box-sizing: border-box;
+}
+
 .logo {
-    color: #0d47a1;
-    font-size: 1.6em;
-    font-weight: bold;
-    text-decoration: none;
+    width: 150px;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.title {
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-size: 20px;
+    color: #044c84;
+    text-align: center;
+}
+
+.button {
+    background-color: #044c84;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.login-button:hover {
+    background-color: #0666b3;
+}
+
+.grid {
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    background-color: #f9f9f9;
+    height: 100vh;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
