--- a/src/main/frontend/styles/shared-styles.css
+++ b/src/main/frontend/styles/shared-styles.css
@@ -37,7 +37,7 @@
     background-color: #044c84;
     color: white;
     border: none;
-    padding: 10px 20px;
+    /*padding: 10px 20px;*/
     font-size: 16px;
     border-radius: 6px;
     cursor: pointer;
